Bugfix: Affichage responsive des contrôles en appliquant un overflow hidden au lieu de faire descendre le contenu

--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ body {
     width: 30%; height: 50%;
 }
 
+#controller label {
+    display: block;
+    min-width: 272px;
+    overflow: hidden;
+} 
+
 #controller button {
     border-radius: 0;
     background: white;
